--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:client": "react-scripts start",
+    "start:server": "node ./server/app/js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,5 +40,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy":"http://localhost:4000/"
 }
