--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "react-share": "^4.4.0"
   }
 }
